--- a/web/src/components/List.css
+++ b/web/src/components/List.css
@@ -2,3 +2,25 @@ div.regibutton {
     margin: 3vh;
     text-align: center;
 }
+
+a.bookDetail {
+    text-decoration: none;
+    color: black;
+}
+a.bookDetail:hover {
+    text-decoration: underline;
+    color: coral;
+}
+
+td a.bookDetail {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    text-align: center;
+    margin-top: 3vh;
+}
